// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button Default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexWrap": "wrap",
      }
    }
  >
    <button
      aria-describedby={null}
      aria-pressed={null}
      className="some-class iot--btn bx--btn bx--btn--primary"
      data-testid="Button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
      type="button"
    >
      Button
    </button>
     
    <a
      className="some-class iot--btn bx--btn bx--btn--primary"
      data-testid="Button"
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      Link
    </a>
     
    <p
      aria-describedby={null}
      aria-pressed={null}
      className="some-class iot--btn bx--btn bx--btn--primary"
      data-testid="Button"
      disabled={false}
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
      type="button"
    >
      Element
    </p>
     
    <a
      aria-describedby={null}
      aria-pressed={null}
      className="some-class iot--btn bx--btn bx--btn--primary"
      data-testid="Button"
      disabled={false}
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
      type="button"
    >
      Custom component
    </a>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button Icon Selection buttons 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-describedby={null}
    className="some-class iot--btn iot--btn-icon-selection bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--bottom bx--tooltip--align-center"
    data-testid="Button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="bx--assistive-text"
      onMouseEnter={[Function]}
    >
      Button icon
    </div>
    <svg
      aria-hidden="true"
      aria-label="Button icon"
      className="bx--btn__icon"
      fill="currentColor"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 32 32"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button Icon-only buttons 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-describedby={null}
    aria-pressed={null}
    className="some-class iot--btn bx--btn bx--btn--primary bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--bottom bx--tooltip--align-center"
    data-testid="Button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="bx--assistive-text"
      onMouseEnter={[Function]}
    >
      Button icon
    </div>
    <svg
      aria-hidden="true"
      aria-label="Button icon"
      className="bx--btn__icon"
      fill="currentColor"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 32 32"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button Sets of Buttons 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--btn-set"
  >
    <button
      aria-describedby={null}
      aria-pressed={null}
      className="some-class iot--btn bx--btn bx--btn--secondary"
      data-testid="Button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
      type="button"
    >
      Secondary button
    </button>
    <button
      aria-describedby={null}
      aria-pressed={null}
      className="some-class iot--btn bx--btn bx--btn--primary"
      data-testid="Button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
      type="button"
    >
      Primary button
    </button>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button loading 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-describedby={null}
    aria-pressed={null}
    className="iot--btn bx--btn bx--btn--primary bx--btn--disabled"
    data-testid="Button"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      aria-atomic="true"
      aria-labelledby="loading-id-1"
      aria-live="assertive"
      className="bx--loading bx--loading--small"
    >
      <label
        className="bx--visually-hidden"
        id="loading-id-1"
      >
        Active loading indicator
      </label>
      <svg
        className="bx--loading__svg"
        viewBox="0 0 100 100"
      >
        <title>
          Active loading indicator
        </title>
        <circle
          className="bx--loading__background"
          cx="50%"
          cy="50%"
          r="42"
        />
        <circle
          className="bx--loading__stroke"
          cx="50%"
          cy="50%"
          r="42"
        />
      </svg>
    </div>
    Test Button
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button loading with secondary 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-describedby={null}
    aria-pressed={null}
    className="iot--btn bx--btn bx--btn--secondary bx--btn--disabled"
    data-testid="Button"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      aria-atomic="true"
      aria-labelledby="loading-id-2"
      aria-live="assertive"
      className="bx--loading bx--loading--small"
    >
      <label
        className="bx--visually-hidden"
        id="loading-id-2"
      >
        Active loading indicator
      </label>
      <svg
        className="bx--loading__svg"
        viewBox="0 0 100 100"
      >
        <title>
          Active loading indicator
        </title>
        <circle
          className="bx--loading__background"
          cx="50%"
          cy="50%"
          r="42"
        />
        <circle
          className="bx--loading__stroke"
          cx="50%"
          cy="50%"
          r="42"
        />
      </svg>
    </div>
    Test Button
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button not loading 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-describedby={null}
    aria-pressed={null}
    className="iot--btn bx--btn bx--btn--primary"
    data-testid="Button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    Test Button
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Button skeleton 1`] = `
<div
  className="storybook-container"
>
  <div>
    <div
      className="bx--skeleton bx--btn"
    />
     
    <a
      className="bx--skeleton bx--btn"
      href="#"
      role="button"
    />
     
    <div
      className="bx--skeleton bx--btn"
    />
  </div>
</div>
`;
